Fix top alignment issue in full message view

--- a/skins/larry/hidelabels.css
+++ b/skins/larry/hidelabels.css
@@ -13,7 +13,7 @@
 #mailboxcontainer,
 #compose-contacts,
 #compose-content,
-#mailview-top {
+#mailview-right {
         top: 32px;
 }
 
